syntax = "proto3";

package mbot;

import "google/protobuf/timestamp.proto";

message SessionToken {
  string value = 1;
  google.protobuf.Timestamp expiration = 2;

}

message LoginRequest{
  string username = 1;
  string password = 2;
}
message LoginResponse {
  bool ok = 1;
}

message LogoutRequest{}
message LogoutResponse{}

message RegisterRequest{
  string username = 1;
  string password = 2;
}
message RegisterResponse{
  bool ok = 1;
}